--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,9 @@
 extends ./layouts/base.jade
 
 append head
-  title Geo-Dashboard
+  link(rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css")
+  link(rel="stylesheet" href="libs/fontawesome/css/font-awesome.min.css")
+  title WANTit
   style.
     html, body {
       width: 100%;
