--- a/views/partials/head.jade
+++ b/views/partials/head.jade
@@ -1,4 +1,5 @@
 meta(charset="UTF-8")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 link(rel="icon" type="image/ico" href="img/favicon.ico")
-link(rel="stylesheet" href="libs/normalize/normalize.css")
+link(rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css")
+link(rel="stylesheet" href="libs/fontawesome/css/font-awesome.min.css")
