--- a/views/partials/head.jade
+++ b/views/partials/head.jade
@@ -3,3 +3,17 @@ meta(name="viewport" content="width=device-width, initial-scale=1.0")
 link(rel="icon" type="image/ico" href="img/favicon.ico")
 link(rel="stylesheet" href="libs/foundation/css/foundation.min.css")
 link(rel="stylesheet" href="libs/fontawesome/css/font-awesome.min.css")
+style.
+  .top-bar, .top-bar ul, .top-bar li, .top-bar a {
+    background: white;
+  }
+  .top-bar .menu-text {
+    color: #ea7b67;
+  }
+  .top-bar-right ul {
+    justify-content: flex-end;
+  }
+  .top-bar {
+    border-bottom: 1px solid #ea7b67;
+    margin-bottom: 1.875em;
+  }
