--- a/views/profile.jade
+++ b/views/profile.jade
@@ -2,29 +2,22 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  style.
-    html, body {
-      width: 100%;
-      height: 100%;
-    }
 
 block header
   +header('Profile')
 
 block content
-  div.container
-    div.row
-      div.col-sm-12
-        div.well
-          h3
-            span.fa.fa-user
-            |  Local
-          p
-            strong id
-            | : #{user.id}
-            br
-            strong email
-            | : #{user.email}
-            br
-            strong password
-            | : #{user.password}
+  div.row.align-center
+    div.small-10.large-6.column
+      h3
+        span.fa.fa-user
+        |  Profile
+      p
+        strong id
+        | : #{user.id}
+        br
+        strong email
+        | : #{user.email}
+        br
+        strong password
+        | : #{user.password}
