--- a/views/signup.jade
+++ b/views/signup.jade
@@ -2,31 +2,21 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  style.
-    html, body {
-      width: 100%;
-      height: 100%;
-    }
-    body {
-      padding-top: 80px;
-    }
 
 block content
-  div.container
-    div.col-sm-6.col-sm-offset-3
+  div(style="height: 100vh").row.align-center.align-middle
+    div.small-10.large-6.column
       h1
         span.fa.fa-sign-in
         |  Signup
       if message
-        div.alert.alert-danger= message
+        div.callout.alert= message
       form(action="/signup" method="post")
-        div.form-group
-          label Email
-          input.form-control(type="text" name="email" placeholder="Email" value=email)
-        div.form-group
-          label Password
-          input.form-control(type="password" name="password" placeholder="Password")
-        button.btn.btn-warning.btn-lg(type="submit") Signup
+        label Email
+          input(type="text" name="email" placeholder="Email" value=email)
+        label Password
+          input(type="password" name="password" placeholder="Password")
+        button(type="submit").button Signup
       hr
       p Already have an account?
         | #{space}
