--- a/views/admin.jade
+++ b/views/admin.jade
@@ -2,23 +2,14 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  style.
-    html, body {
-      width: 100%;
-      height: 100%;
-    }
 
 block header
-  div.container.header
-    div.page-header.text-center
-      h1
-        span.fa.fa-exclamation-triangle
-        |  Admin Page
+  +header('Admin')
 
 block content
-  div.container
-    div.row
-      div.col-sm-6.col-sm-offset-3
-        div.well.text-center
-          h3 Under Construction
-          p Page is currently under construction
+  div.row.align-center
+    div.small-10.large-6.column
+      h3
+        span.fa.fa-calendar
+        |  Under Construction
+      p Page is currently under construction
