--- a/views/error.jade
+++ b/views/error.jade
@@ -2,23 +2,12 @@ extends ./layouts/base.jade
 
 append head
   title WANTit
-  style.
-    html, body {
-      width: 100%;
-      height: 100%;
-    }
 
-block header
-  div.container.header
-    div.page-header.text-center
+block content
+  div(style="height: 100vh").row.align-center.align-middle
+    div.small-10.large-10.column.text-center
       h1
         span.fa.fa-exclamation-triangle
         |  #{statusCode} #{error}
-
-block content
-  div.container
-    div.row
-      div.col-sm-6.col-sm-offset-3
-        div.well.text-center
-          h3 Oops, sorry we can't find that page
-          p Either something went wrong or the page doesn't exist
+      h3 Oops, sorry we can't find that page
+      p Either something went wrong or the page doesn't exist
