--- a/views/profile.jade
+++ b/views/profile.jade
@@ -4,7 +4,7 @@ append head
   title WANTit
 
 block header
-  +header('Profile')
+  +header('margin-bottom')
 
 block content
   div.row.align-center
