--- a/views/partials/head.jade
+++ b/views/partials/head.jade
@@ -4,8 +4,8 @@ link(rel="icon" type="image/ico" href="img/favicon.ico")
 link(rel="stylesheet" href="libs/foundation/css/foundation.min.css")
 link(rel="stylesheet" href="libs/fontawesome/css/font-awesome.min.css")
 style.
-  .top-bar, .top-bar ul, .top-bar li, .top-bar a {
-    background: white;
+  .top-bar ul, .top-bar li, .top-bar a {
+    background: transparent;
   }
   .top-bar .menu-text {
     color: #ea7b67;
@@ -14,6 +14,29 @@ style.
     justify-content: flex-end;
   }
   .top-bar {
+    background: white;
     border-bottom: 1px solid #ea7b67;
+    z-index: 10;
+  }
+  .top-bar.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  .top-bar.transparent {
+    background: transparent;
+    border-bottom: 0;
+  }
+  .top-bar.transparent .menu-text {
+    color: white;
+  }
+  .top-bar.transparent .menu a {
+    color: white;
+  }
+  .top-bar.margin-bottom {
     margin-bottom: 1.875em;
+  }
+  .top-bar.transition {
+    transition: all 0.2s ease-in-out;
   }
