improved responsiveness of landing page

--- a/views/index.jade
+++ b/views/index.jade
@@ -91,8 +91,8 @@ append head
     }
     .download-app .devices {
       position: relative;
-      height: 500px;
       transform: translate(0, -15%);
+      padding-top: 120%;
     }
     .download-app .device-android {
       position: absolute;
@@ -100,17 +100,17 @@ append head
       left: 0;
       background: url("img/android_wantit.png") no-repeat;
       background-size: contain;
-      height: 500px;
-      width: 500px;
+      width: 60%;
+      padding-top: 120%;
     }
     .download-app .device-ios {
       position: absolute;
       top: 50px;
-      left: 150px;
+      left: 120px;
       background: url("img/ios_wantit.png") no-repeat;
       background-size: contain;
-      height: 500px;
-      width: 500px;
+      width: 60%;
+      padding-top: 120%;
     }
     .join-wantit {
       position: relative;
