--- a/views/mixins/mixins.jade
+++ b/views/mixins/mixins.jade
@@ -1,10 +1,8 @@
 mixin header(classes)
   - var items = ['Dashboard', 'Profile', 'Logout']
   div(id="main-menu" class=classes).top-bar
-    div.top-bar-left
-      ul.dropdown.menu
-        li
-          a.menu-text(href="/") WANTit
+    div.top-bar-title
+      a.menu-text(href="/") WANTit
     div.top-bar-right
       ul.menu
         each item, index in items
