--- a/views/index.jade
+++ b/views/index.jade
@@ -274,7 +274,18 @@ block scripts
           topBar.removeClass('transparent');
         }
       });
+      $(window).on('touchmove', () => {
+        const position = $(document).scrollTop();
+        if (position === 0) {
+          topBar.addClass('transparent');
+        } else {
+          topBar.removeClass('transparent');
+        }
+      });
       $('.scroll').on('click', () => {
+        $('html, body').animate({scrollTop: $(window).height() - $('.top-bar').height()})
+      });
+      $('.scroll').on('touchend', () => {
         $('html, body').animate({scrollTop: $(window).height() - $('.top-bar').height()})
       });
     });
