--- a/views/index.jade
+++ b/views/index.jade
@@ -277,7 +277,7 @@ block scripts
           topBar.removeClass('transparent');
         }
       });
-      $('body').on('touchmove', () => {
+      $('body').on('touchmove', (e) => {
         const position = $('body').scrollTop();
         if (position === 0) {
           topBar.addClass('transparent');
@@ -288,7 +288,7 @@ block scripts
       $('.scroll').on('click', () => {
         $('html, body').animate({scrollTop: $(window).height() - $('.top-bar').height()})
       });
-      $('.scroll').on('touchend', () => {
+      $('.scroll').on('touchend', (e) => {
         $('html, body').animate({scrollTop: $(window).height() - $('.top-bar').height()})
       });
     });
