--- a/views/index.jade
+++ b/views/index.jade
@@ -268,6 +268,7 @@ block scripts
   script(src="libs/jquery/jquery-2.2.0.min.js")
   script.
     $(() => {
+      alert('jquery ready')
       const topBar = $('.top-bar');
       $(window).on('scroll', () => {
         const position = $(window).scrollTop();
