moved script to own file

--- a/views/index.jade
+++ b/views/index.jade
@@ -100,21 +100,4 @@ block content
 
 block scripts
   script(src="libs/jquery/jquery-2.2.0.min.js")
-  script.
-    $(() => {
-      const topBar = $('.top-bar');
-      $(window).on('scroll', () => {
-        const position = $(window).scrollTop();
-        if (position === 0) {
-          topBar.addClass('transparent');
-        } else {
-          topBar.removeClass('transparent');
-        }
-      });
-      $('.scroll').on('click', () => {
-        $('body').animate({scrollTop: $(window).height() - $('.top-bar').height()})
-      });
-      $('.scroll').on('touchstart', () => {
-        $('body').animate({scrollTop: $(window).height() - $('.top-bar').height()})
-      });
-    });
+  script(src="js/index.min.js")
