sassified index.js

--- a/views/index.jade
+++ b/views/index.jade
@@ -54,8 +54,8 @@ block content
     div.row.text-center
       div.small-12.medium-expand.column.align-self-middle
         div.devices
-          div.device-android
-          div.device-ios
+          div.device.android
+          div.device.ios
       div.small-12.medium-expand.column.align-self-middle
         h3 Download WANTit and start enjoying a brand new shopping experience.
         h5 First delivery free!
@@ -77,13 +77,13 @@ block content
         a(href="#") Work with us
       div.column.align-self-bottom
         div.media
-          div.media-item
+          div.item
             a(href="#")
               span.fa.fa-facebook
-          div.media-item
+          div.item
             a(href="#")
               span.fa.fa-twitter
-          div.media-item
+          div.item
             a(href="#")
               span.fa.fa-instagram
       div.column.align-self-top.text-right
