added support for json web tokens

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -19,5 +19,5 @@ block content
         strong email
         | : #{user.email}
         br
-        strong password
-        | : #{user.password}
+        strong token
+        | : #{user.token}
