--- a/views/login.jade
+++ b/views/login.jade
@@ -11,7 +11,7 @@ block content
         |  Login
       if message
         div.callout.alert= message
-      form(action="/login" method="post")
+      form(action="#{prefix}/login" method="post")
         label Email
           input(type="text" name="email" placeholder='Email' value=email)
         label Password
@@ -20,8 +20,8 @@ block content
       hr
       p Need an account?
         | #{space}
-        a(href="/signup") Signup
+        a(href="#{prefix}/signup") Signup
       p Or go
         | #{space}
-        a(href="/") home
+        a(href="#{prefix}") home
         | .
