--- a/views/partials/head.jade
+++ b/views/partials/head.jade
@@ -1,8 +1,8 @@
 meta(charset="UTF-8")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 link(rel="icon" type="image/ico" href="img/favicon.ico")
-link(rel="stylesheet" href="libs/foundation/css/foundation.min.css")
-link(rel="stylesheet" href="libs/fontawesome/css/font-awesome.min.css")
+link(rel="stylesheet" href="#{prefix}/libs/foundation/css/foundation.min.css")
+link(rel="stylesheet" href="#{prefix}/libs/fontawesome/css/font-awesome.min.css")
 style.
   .top-bar ul, .top-bar li, .top-bar a {
     background: transparent;
